2012-08-14  Milian Wolff  <milian.wolff@kdab.com>

        [Qt] QNX build fails due to reference to MADV_FREE_REUSE and MADV_FREE_REUSABLE
        https://bugs.webkit.org/show_bug.cgi?id=93843

        Reviewed by Simon Hausmann.

        QNX does not implement MADV_FREE_REUSE nor MADV_FREE_REUSABLE.
        The Blackberry port already sets the define to use the system
        malloc, which is now also done for QNX in general.

        * wtf/Platform.h:

2012-08-13  Raphael Kubo da Costa  <rakuco@webkit.org>

        [CMake] Remove glib-related Find modules and write single new one instead.
        https://bugs.webkit.org/show_bug.cgi?id=93786

        Reviewed by Rob Buis.

        * wtf/PlatformEfl.cmake: Use GLIB_* instead of Glib_*, and link directly to GIO, as wtf/gobject uses functions from it.

2012-08-11  Sam Weinig  <sam@webkit.org>

        Enable XPC Service based WebProcess with runtime flag
        https://bugs.webkit.org/show_bug.cgi?id=93773

        Reviewed by Dan Bernstein.

        * wtf/Platform.h:
        Define HAVE_XPC on 10.7 and later.

2012-08-11  Benjamin Poulain  <bpoulain@apple.com>

        Do the DecimalNumber to String conversion on 8 bits
        https://bugs.webkit.org/show_bug.cgi?id=93683

        Reviewed by Andreas Kling.

        Modify DecimalNumber to do the conversion to string on LChar instead of UChar.

        * wtf/DecimalNumber.cpp:
        (WTF::DecimalNumber::toStringDecimal):
        (WTF::DecimalNumber::toStringExponential):
        * wtf/DecimalNumber.h:
        (DecimalNumber):
        * wtf/dtoa.h:
        * wtf/text/StringBuffer.h:
        (WTF::StringBuffer::operator[]): StringBuffer::operator[] was incorrectly typed to UChar, making
        the method impossible to instanciate with LChar.
        * wtf/text/WTFString.h:
        (String):
        (WTF::String::adopt): String::adopt() is modified to work with both LChar and UChar. StringImpl
        already support that.